fix: fix component_filter display issue where long lists were not being cut off, generating very long lines vertically

--- a/core/component_filter/css/component_filter.less
+++ b/core/component_filter/css/component_filter.less
@@ -87,6 +87,11 @@
 		}
 	}
 
+	&.list {
+		max-height: 5rem;
+		overflow: auto;
+	}
+
 }//end .component_filter
 
 // inside inspector
